[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Settings.gd" type="Script" id=1]

[node name="Settings" type="ScrollContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
resDropdown_path = NodePath("VBoxContainer/resDropdown")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 216.0
size_flags_horizontal = 3

[node name="Fullscreen" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Fullscreen" type="Label" parent="VBoxContainer/Fullscreen"]
margin_top = 9.0
margin_right = 944.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Fullscreen"
align = 1
valign = 1

[node name="Fullscreen_toggle" type="CheckButton" parent="VBoxContainer/Fullscreen"]
margin_left = 948.0
margin_right = 1024.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 66.0
text = "Fullscreen Resolution: "

[node name="resDropdown" type="OptionButton" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 1024.0
margin_bottom = 98.0

[node name="Music Volume" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 1024.0
margin_bottom = 124.0

[node name="MusicLabel" type="Label" parent="VBoxContainer/Music Volume"]
margin_right = 111.0
margin_bottom = 22.0
text = "Music Volume: "

[node name="Music" type="HSlider" parent="VBoxContainer/Music Volume"]
margin_left = 115.0
margin_right = 1024.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -24.0
max_value = 24.0

[node name="Sound Volume" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 1024.0
margin_bottom = 150.0

[node name="SfxLabel" type="Label" parent="VBoxContainer/Sound Volume"]
margin_right = 114.0
margin_bottom = 22.0
text = "Sound Volume: "

[node name="Sound" type="HSlider" parent="VBoxContainer/Sound Volume"]
margin_left = 118.0
margin_right = 1024.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -24.0
max_value = 24.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 1024.0
margin_bottom = 184.0

[node name="Colorblind Mode" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_top = 4.0
margin_right = 127.0
margin_bottom = 26.0
text = "Colorblind Mode: "

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer3"]
margin_left = 131.0
margin_right = 155.0
margin_bottom = 30.0

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 188.0
margin_right = 1024.0
margin_bottom = 216.0
text = "BACK"
[connection signal="toggled" from="VBoxContainer/Fullscreen/Fullscreen_toggle" to="." method="_on_Fullscreen_toggle_toggled"]
[connection signal="item_selected" from="VBoxContainer/resDropdown" to="." method="_on_resDropdown_item_selected"]
[connection signal="value_changed" from="VBoxContainer/Music Volume/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sound Volume/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
